--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,9 @@
 {
-  "extends": ["airbnb", "prettier", "plugin:node/recommended"],
+  "extends": ["plugin:node/recommended", "plugin:jest/recommended", "eslint-config-airbnb-typescript", "prettier", "eslint-config-prettier"],
+  "env": {
+    "node": true
+  },
+  "parser": "babel-eslint",
   "plugins": ["prettier"],
   "rules": {
     "prettier/prettier": "error",
