--- a/package.json
+++ b/package.json
@@ -43,9 +43,10 @@
     "@types/swagger-ui-express": "^4.1.3",
     "axios": "^1.3.4",
     "babel-jest": "^29.4.3",
-    "eslint": "^8.34.0",
+    "eslint": "^8.38.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-node": "^4.1.0",
-    "eslint-config-prettier": "^8.6.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.4.3",
