--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
   "scripts": {
     "build": "tsc",
     "test": "jest --coverage",
-    "test:watch": "NODE_OPTIONS=\"--experimental-vm-modules\" jest --watchAll"
+    "test:watch": "NODE_OPTIONS=\"--experimental-vm-modules\" jest --watchAll",
+    "lint": "eslint --ext .ts src",
+    "lint:fix": "eslint --ext .ts src --fix",
+    "start": "node dist/server.js",
+    "start:dev": "nodemon --watch src --exec \"ts-node\" src/server.ts",
+    "start:debug": "nodemon --watch src --exec \"ts-node --inspect\" src/server.ts"
   },
   "keywords": [],
   "author": "",
@@ -47,6 +52,7 @@
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-node": "^4.1.0",
     "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.4.3",
