--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,17 +1,16 @@
 {
-  "extends": ["plugin:node/recommended", "plugin:jest/recommended", "eslint-config-airbnb-typescript", "prettier", "eslint-config-prettier"],
-  "env": {
-    "node": true
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaVersion": 12,
+    "sourceType": "module"
   },
-  "parser": "@babel/eslint-parser",
-  "plugins": ["prettier"],
+  "plugins": ["@typescript-eslint"],
+  "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
   "rules": {
-    "prettier/prettier": "error",
-    "no-unused-vars": "warn",
-    "no-console": "off",
-    "func-names": "off",
-    "no-process-exit": "off",
-    "object-shorthand": "off",
-    "class-methods-use-this": "off"
+
+  },
+  "env": {
+    "node": true,
+    "es2021": true
   }
 }
